src/css/main.scss
@use "./variables.scss" as *;

@font-face {
	font-family: "Bebas Neue";
	font-style: normal;
	font-weight: 400;
	src: url(https://fonts.gstatic.com/s/bebasneue/v15/JTUSjIg69CK48gW7PXoo9WlhyyTh89Y.woff2)
		format("woff2");
	unicode-range:
		U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329,
		U+2000-206F, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

:root {
	// I really don't care which font is displayed for body text as long as it's somewhat legible lol
	font-family: sans-serif;
	color: rgba($content-light, 0.8);
	background-color: $bg-dark;
	color-scheme: dark;
}

// fix weird lip around edges
body {
	margin: 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
	color: $content-light;
}

h1,
.h1 {
	font-family: "Bebas Neue", sans-serif;
	// bebas neue bold is absolutely disgusting
	font-weight: normal;
	font-size: 5rem;
	// closer to tracking of wordmark
	letter-spacing: 0.2rem;
	text-transform: uppercase;
	text-align: center;
	@media screen and (max-width: 760px) {
		font-size: 4rem;
	}
}

h2,
.h2 {
	font-family: "menlo", "consolas", monospace;
	font-weight: bold;
	font-size: 2rem;
}

p,
a,
li {
	font-size: 20px;
	line-height: 1.5;
}

ul,
ol {
	list-style-position: inside;
	padding-inline-start: 20px;
}

textarea {
	font-family: inherit;
	overflow-wrap: anywhere;
	resize: vertical;
}

.all-center {
	display: flex;
	flex-flow: column nowrap;
	align-items: center;
	* {
		text-align: center;
	}
}

.center {
	text-align: center;
}

.block {
	width: 100%;
}

.tiny {
	font-size: 0.75rem;
}

a {
	color: $accent-light;
	transition: all 0.25s ease;
	text-decoration: none;
	&:hover {
		color: $accent-dark;
	}
}

.link-hover {
	transition: all 0.25s ease;
	&:hover {
		color: $accent-light;
		transform: scale(0.9);
	}
}

.info-text {
	font-family: "menlo", "consolas", monospace;
	color: $content-light;
}

.hoverable {
	transition: all 0.5s ease;
	&:hover {
		transform: scale(1.1);
	}
}

.container {
	width: 100%;
	flex-grow: 1;
	padding-right: 30px;
	padding-left: 30px;
	margin-right: auto;
	margin-left: auto;
	@media screen and (min-width: 576px) {
		max-width: 540px;
	}
	@media screen and (min-width: 760px) {
		max-width: 720px;
	}
	@media screen and (min-width: 960px) {
		max-width: 960px;
	}
	@media screen and (min-width: 1280px) {
		max-width: 1140px;
	}
}

.banner-img {
	filter: drop-shadow(0px 10px 10px #00000077);
	margin-bottom: 50px;
	margin-top: 0;
}

.general-button {
	color: #fff;
	background-color: $bg-light;
	border-radius: 4px;
	font-size: 18px;
	padding: 20px;
	letter-spacing: 1.6px;
	border: none;
	text-transform: uppercase;
	box-shadow: $drop-shadow;

	transition: all 0.25s ease;
	&:hover {
		background-color: $bg-mid;
		cursor: pointer;
	}
	&:active {
		background-color: $content-dark;
	}
}

.general-input {
	color: #fff;
	background-color: $bg-light;
	border-radius: 4px;
	font-size: 18px;
	padding: 16px;
	border: none;
	outline: none;
	box-shadow: $drop-shadow;
	text-align: left;

	transition: all 0.25s ease;
	&:focus {
		background-color: $bg-mid;
	}
}

